Fix blurry icons in webkit

--- a/modules/web_server/static/styles/defaults.sass
+++ b/modules/web_server/static/styles/defaults.sass
@@ -28,3 +28,10 @@ label
   right: 0
   background: white
   box-shadow: 0 0 15px 20px white
+
+img
+  image-rendering: -moz-crisp-edges
+  image-rendering:   -o-crisp-edges
+  image-rendering: -webkit-optimize-contrast
+  image-rendering: crisp-edges
+  -ms-interpolation-mode: nearest-neighbor
