--- a/modules/web_server/static/styles/main.css
+++ b/modules/web_server/static/styles/main.css
@@ -73,6 +73,14 @@ label {
   box-shadow: 0 0 15px 20px white;
 }
 
+img {
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;
+}
+
 body {
   height: 100vh;
 }
